<resources>
    <string name="app_name">Krama Sipandu Beradat</string>
    <string name="sipandu_beradat">Sipandu Beradat</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="daftar">Daftar</string>
    <string name="simpan">Simpan</string>
    <string name="kembali">Kembali</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nik">NIK</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="banjar">Banjar</string>
    <string name="desa_adat">Desa Adat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="no_telepon">No Telepon</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="profil">Profil</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="darurat">Darurat</string>
    <string name="menunggu_validasi">Menunggu Validasi</string>
    <string name="menunggu_petugas">Menunggu Petugas</string>
    <string name="selesai">Selesai</string>
    <string name="ilustrasi_awal">Ilustrasi Awal</string>
    <string name="ubah_nama_lengkap">Ubah Nama Lengkap</string>
    <string name="ubah_nama_pengguna">Ubah Nama Pengguna</string>
    <string name="ubah_wilayah">Ubah Wilayah</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ubah_jenis_kelamin">Ubah Jenis Kelamin</string>
    <string name="ubah_no_telepon">Ubah No Telepon</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="maksimal_karakter">Maksimal 255 Karakter</string>
    <string name="syarat_dan_ketentuan_awal">Mohon baca dan pahami</string>
    <string name="syarat_dan_ketentuan_akhir">aplikasi ini. Segala bentuk pelanggaran akan dikenakan
        sanksi sesuai dengan ketentuan yang berlaku</string>
    <string name="persetujuan_syarat_dan_ketentuan">Saya telah membaca dan menyetujui syarat dan
        ketentuan aplikasi</string>
    <string name="pelaporan">Pelaporan</string>
    <string name="laporkan">Laporkan</string>
    <string name="batalkan">Batalkan</string>
    <string name="apakah_yakin">Apakah Anda Yakin Ingin Melaporkan Kejadian Ini?</string>
    <string name="laporkan_keluhan_anda">Laporkan Keluhan Anda Agar Dapat Ditangani Oleh Pihak Yang Berwenang</string>
    <string name="pengajuan_keluhan">Pengajuan Keluhan</string>
    <string name="keluhan">Keluhan</string>
    <string name="judul_keluhan">Judul Keluhan</string>
    <string name="jenis_keluhan">Jenis Keluhan</string>
    <string name="keterangan_keluhan">Keterangan Keluhan</string>
    <string name="lokasi_keluhan">Lokasi Keluhan</string>
    <string name="foto_keluhan">Foto Keluhan</string>
    <string name="ajukan_keluhan">Ajukan Keluhan</string>
    <string name="ambil_dari_kamera">Ambil Dari Kamera</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="laporan_kejadian">Laporan Kejadian</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="cari_lokasi">Cari Lokasi</string>
    <string name="tulis_detail_lokasi">Tulis Detail Lokasi Dengan Jelas</string>
    <string name="detail_laporan">Detail Laporan</string>
    <string name="perkiraan_petugas_datang">Perkiraan Petugas Datang</string>
    <string name="status">Status</string>
    <string name="detail_darurat">Detail Darurat</string>
    <string name="pilih_lokasi_ini">Pilih Lokasi Ini</string>
    <string name="pelaporan_darurat">Pelaporan Darurat</string>
    <string name="tombol_darurat">Tombol Darurat</string>
    <string name="deskripsi_tombol_darurat">Tekan tombol darurat berikut sesuai dengan keadaan
        darurat yang Anda alami. Mohon diperhatikan bahwa pelaporan palsu dapat
        diberikan sanksi sesuai dengan ketentuan yang berlaku</string>
    <string name="berita">Berita</string>
    <string name="riwayat">Riwayat</string>
    <string name="riwayat_pelaporan">Riwayat Pelaporan</string>
    <string name="data_diri">Data Diri</string>
    <string name="alamat">Alamat</string>
    <string name="kerabat">Kerabat</string>
    <string name="ubah">Ubah</string>
    <string name="kategori">Kategori</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="negara">Negara</string>
    <string name="provinsi">Provinsi</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="ubah_alamat">Ubah Alamat</string>
    <string name="daynight">Day Night</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="nama_pengguna_helper">Masukkan nama pengguna kerabat untuk mulai proses pencarian</string>
    <string name="pencarian_kerabat">Pencarian Kerabat</string>
    <string name="ubah_lokasi">Ubah Lokasi</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="konfirmasi_pelaporan_darurat">Apakah Anda yakin ingin membuat pelaporan darurat ini?</string>
    <string name="batal">Batal</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tambah_kerabat">Tambah Kerabat</string>
    <string name="lini_masa">Lini Masa</string>
</resources>