<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/emergency"
        android:icon="@drawable/ic_emergency"
        android:title="@string/darurat"
        android:contentDescription="@string/darurat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report_history"
        android:icon="@drawable/ic_report"
        android:title="@string/riwayat"
        android:contentDescription="@string/riwayat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/timeline"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/lini_masa"
        android:contentDescription="@string/lini_masa"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profil"
        android:contentDescription="@string/profil"
        app:showAsAction="ifRoom" />

</menu>