<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/syarat_dan_ketentuan"
        android:textColor="?colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_term_condition"
        android:contentDescription="@string/syarat_dan_ketentuan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/syarat_dan_ketentuan_awal" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/syarat_dan_ketentuan"
            android:textSize="12sp"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/syarat_dan_ketentuan_akhir"
        android:lineSpacingExtra="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="@string/persetujuan_syarat_dan_ketentuan"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/term_condition_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:enabled="false"
        app:cornerRadius="12dp"
        app:elevation="0dp" />

</LinearLayout>